<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_bg"
    tools:context=".RecipeSearch">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/search_bar"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeToolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintVertical_bias="1.0"
        tools:itemCount="50" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/recipeToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#609A63"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/sphere_image_button"
        android:backgroundTint="#609A63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeToolbar"
        app:srcCompat="@android:drawable/ic_menu_search" />

</androidx.constraintlayout.widget.ConstraintLayout>